# moudi-raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  start.sh
includes/: common.h  list.h  material.h  ppm.h  quaternion.h  scene.h  vec3.h
includes/objects/: camera.h  object.h  plane.h  ray.h  sphere.h
includes/utils/: vec.h
raytracer-lib/: CMakeLists.txt
raytracer-lib/includes/: common.h  material.h  scene.h
raytracer-lib/includes/objects/: camera.h  object.h  plane.h  ray.h  sphere.h
raytracer-lib/includes/utils/: list.h  rand.h  vec.h
raytracer-lib/src/: material.cu  scene.cu
raytracer-lib/src/objects/: camera.cu  object.cu  plane.cu  ray.cu  sphere.cu
raytracer-lib/src/utils/: gpu.cu  list.cu  rand.cu  vec.cu
src/: main.c  main.cu  material.c  ppm.c  quaternion.c  scene.c  vec3.c
src/objects/: camera.c  object.c  plane.c  ray.c  sphere.c
src/utils/: list.c  vec.c
